[batch] avoid unnecessary locks
1. msec_mcpu is not used any more, so don't bother. This causes a conflict with *every other job in
   the batch*, effectively serializing changes to every attempt in the same batch.

2. There is no need to eagerly take update lock on the instances table in add_attempt. A share lock
   prevents other rows from mutating that value while we're looking at it. We do not care if they
   read an old value for free_cores_mcpu between us reading `state` and us updating
   `free_cores_mcpu`.

3. In `schedule_job` there is no need to take an update lock on the `batches` table (which
   effectively serializes all scheduling on the same batch).

4. In `unschedule_job`, I made the formatting match other selects.

5. In `unschedule_job`, same thing about update locks on the `instances` table.

6. In `mark_job_creating`, same thing about update locks on the `batches` table.

7. In `mark_job_started`, same thing about update locks on the `batches` table.

8. In `mark_job_complete`, same thing about update locks on the `instances` table.

--- a/build.yaml
+++ b/build.yaml
@@ -2136,6 +2136,8 @@ steps:
         script: /io/sql/increase-test-and-dev-pool-sizes.py
       - name: fix-provisioning-bug
         script: /io/sql/fix-provisioning-bug.sql
+      - name: do-not-lock-entire-batch
+        script: /io/sql/do-not-lock-entire-batch.sql
     inputs:
       - from: /repo/batch/sql
         to: /io/sql
