--- a/batch/Makefile
+++ b/batch/Makefile
@@ -14,7 +14,7 @@ check:
 	$(PYTHON) -m flake8  --config ../setup.cfg batch
 	$(PYTHON) -m pylint --rcfile ../pylintrc batch --score=n
 	curlylint .
-	../check-sql.sh
+	bash ../check-sql.sh
 
 .PHONY: build-prereqs
 build-prereqs:
