--- a/ci/deployment.yaml
+++ b/ci/deployment.yaml
@@ -67,6 +67,8 @@ spec:
              value: "{{ global.zone }}"
            - name: HAIL_CI_UTILS_IMAGE
              value: "{{ ci_utils_image.image }}"
+           - name: HAIL_KANIKO_IMAGE
+             value: "{{ hail_kaniko_image.image }}"
            - name: HAIL_IP
              value: "{{ global.ip }}"
            - name: HAIL_DOMAIN
