--- a/batch/Dockerfile.worker
+++ b/batch/Dockerfile.worker
@@ -12,7 +12,8 @@ RUN hail-apt-get-install \
 COPY docker/hail-ubuntu/pip.conf /root/.config/pip/pip.conf
 COPY docker/hail-ubuntu/hail-pip-install /bin/hail-pip-install
 COPY docker/requirements.txt .
-RUN hail-pip-install -r requirements.txt pyspark==3.1.1
+RUN chmod 755 /bin/hail-pip-install && \
+    hail-pip-install -r requirements.txt pyspark==3.1.1
 
 ENV SPARK_HOME /usr/local/lib/python3.7/site-packages/pyspark
 ENV PATH "$PATH:$SPARK_HOME/sbin:$SPARK_HOME/bin"
@@ -22,7 +23,6 @@ COPY batch/download-gcs-connector.py /
 RUN python3 /download-gcs-connector.py
 COPY docker/core-site.xml ${SPARK_HOME}/conf/core-site.xml
 
-COPY docker/hail-ubuntu/hail-apt-get-install /bin/hail-apt-get-install
 RUN echo "APT::Acquire::Retries \"5\";" > /etc/apt/apt.conf.d/80-retries && \
     hail-apt-get-install curl gnupg xfsprogs && \
     export GCSFUSE_REPO=gcsfuse-bionic && \
@@ -30,8 +30,6 @@ RUN echo "APT::Acquire::Retries \"5\";" > /etc/apt/apt.conf.d/80-retries && \
     curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add - && \
     hail-apt-get-install fuse gcsfuse
 
-COPY docker/hail-ubuntu/pip.conf /root/.config/pip/pip.conf
-COPY docker/hail-ubuntu/hail-pip-install /bin/hail-pip-install
 RUN python3 -m pip install --upgrade --no-cache-dir pip
 
 COPY hail/python/setup-hailtop.py /hailtop/setup.py
