--- a/build.yaml
+++ b/build.yaml
@@ -646,8 +646,8 @@ steps:
       time retry ./gradlew --version
       time retry make shadowJar
     inputs:
-      - from: /repo/hail
-        to: /io/repo/hail
+      - from: /repo
+        to: /io/repo
     outputs:
       - from: /io/repo/hail/build/libs/hail-all-spark.jar
         to: /just-jar/hail.jar
